Implementação de DTO, Mapper e melhorias na API de Pedidos
Adicionada camada de DTO para entrada e saída de dados, isolando a entidade Pedido da API.
Implementado Mapper para conversão entre DTO e entidade, melhorando organização e manutenção.
Aplicadas validações com Bean Validation e ajustes no controller para boas práticas REST.
Projeto segue agora arquitetura mais profissional, preparada para evolução (update, paginação e tratamento de erros).