@@ -2,13 +2,13 @@ package com.douglas.apipedidos.controller;
 
 import com.douglas.apipedidos.dto.PedidoRequestDTO;
 import com.douglas.apipedidos.dto.PedidoResponseDTO;
+import com.douglas.apipedidos.mapper.PedidoMapper;
 import com.douglas.apipedidos.model.Pedido;
 import com.douglas.apipedidos.service.PedidoService;
 import jakarta.validation.Valid;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/pedidos")
@@ -20,54 +20,42 @@ public class PedidoController {
         this.service = service;
     }
 
-    // POST
+    // POST - Criar pedido
     @PostMapping
     public PedidoResponseDTO criar(@Valid @RequestBody PedidoRequestDTO dto) {
 
-        Pedido pedido = new Pedido();
-        pedido.setCliente(dto.getCliente());
-        pedido.setValor(dto.getValor());
+        // DTO -> Entity
+        Pedido pedido = PedidoMapper.toEntity(dto);
 
+        // Salva
         Pedido salvo = service.salvar(pedido);
 
-        return toResponseDTO(salvo);
+        // Entity -> ResponseDTO
+        return PedidoMapper.toResponse(salvo);
     }
 
-    // GET
+    // GET - Listar todos
     @GetMapping
     public List<PedidoResponseDTO> listar() {
 
         return service.listarTodos()
                 .stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .map(PedidoMapper::toResponse)
+                .toList();
     }
 
-    // GET por id
+    // GET - Buscar por id
     @GetMapping("/{id}")
     public PedidoResponseDTO buscar(@PathVariable Long id) {
 
         Pedido pedido = service.buscarPorId(id);
 
-        return toResponseDTO(pedido);
+        return PedidoMapper.toResponse(pedido);
     }
 
     // DELETE
     @DeleteMapping("/{id}")
     public void deletar(@PathVariable Long id) {
         service.deletar(id);
-    }
-
-    // Conversor
-    private PedidoResponseDTO toResponseDTO(Pedido pedido) {
-
-        PedidoResponseDTO dto = new PedidoResponseDTO();
-
-        dto.setId(pedido.getId());
-        dto.setCliente(pedido.getCliente());
-        dto.setValor(pedido.getValor());
-        dto.setDataCriacao(pedido.getDataCriacao());
-
-        return dto;
     }
 }
